--- a/index.html
+++ b/index.html
@@ -3,4 +3,17 @@ layout: default
 title: About
 ---
 
-블라블라블라 
+### 술 (전통주)  
+알코올 성분이 들어 있어 마시면 사람을 취하게 하는 음료의 총칭. (출처: [*한국민족문화대백과사전*](http://encykorea.aks.ac.kr/Contents/SearchNavi?keyword=%EC%88%A0&ridx=9&tot=411))  
+
+「주세법(酒稅法)」에 의하면 알코올 함량 1도 이상의 음료를 말한다. 예로부터 알려진 과실주나 곡물주를 비롯, 근대의 증류주에 이르기까지 이른바 주정음료는 모두 술이다.
+
+술은 일부 민족을 제외한 거의 모든 민족이 지니고 있으며 그 용도도 다양하여 굿이나 관혼상제와 같은 의례적 행사에서뿐만 아니라 일상생활의 여러 경우에 두루 쓰이고 있다.
+
+술에 대한 우리의 관념은 이를 긍정적으로 보는 견해와 부정적으로 보는 견해가 공존하여왔다. 술은 사람에게 유익한 것으로 생각되어 ‘백약지장(百藥之長)’이라 불리는 반면에 부정적인 면에서 ‘광약(狂藥)’이라고도 불렸다.
+술을 마시니 근력이 생기고 묵은 병이 낫는다고 하여 음주를 권장함은 옛 기록에서 흔히 보는 예이다. 『성호사설(星湖僿說)』에 주재(酒材)의 노인을 봉양하고 제사를 받드는 데에 술 이상 좋은 것이 없다고 하는 내용이나, 『청장관전서(靑莊館全書)』에 이목구심서(耳目口心書)의 기혈(氣血)을 순환시키고 정을 펴며 예(禮)를 행하는 데에 필요한 것이라 하는 내용은 모두 술을 인간생활에 필요한 것으로 보는 긍정적인 견해이다.
+설날에 도소주(屠蘇酒)주 01)를 들고, 이명주(耳明酒)를 마시며 또 어른께 만수무강을 빌며 술로 헌수(獻壽)하는 것도 모두 건강과 장수를 바라던 뜻에서 비롯된 것이다.
+술을 부정적으로 보는 이유는 술이 사람을 취하게 하여 정신을 흐리게 하기 때문이다. 사람에 따라서는 주정이 심하여 몸을 해치고 가산을 탕진하기도 하고, 임금으로서 주색에 빠져 나라를 망치는 일도 있었기 때문에 ‘망신주(亡身酒)’ 또는 ‘망국주(亡國酒)’라는 말이 생기기도 하였다.
+
+우리나라 전통적인 술은 크게 탁주·청주·소주의 세 가지로 나눌 수 있다. 탁주는 예로부터 주로 농군들이 마시던 술이라 하여 ‘농주(農酒)’라고도 하고, 즉석에서 걸러 마신다 하여 ‘막걸리’, 그 빛깔이 희다고 하여 ‘백주(白酒)’라고도 한다.
+청주는 탁주에 비하여 더 정성을 들여 빚은 고급술로 ‘약주(藥酒)’라고도 한다. 소주는 고려 이후 우리나라에 널리 보급된 술로 재래주 가운데 가장 독한 술이다. 그밖에 이양주(異釀酒)나 향양주(香釀酒) 등의 갖가지 특별한 술이 있었다. 근대 이후로는 맥주나 양주 등도 들어와 술의 종류는 더욱 다양하여졌다.
