--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: About
 ---
 
 <h3>술 (전통주)</h3>  
-알코올 성분이 들어 있어 마시면 사람을 취하게 하는 음료의 총칭. (출처: <a href="http://encykorea.aks.ac.kr/Contents/SearchNavi?keyword=%EC%88%A0&ridx=9&tot=411">한국민족문화대백과사전</a>
+알코올 성분이 들어 있어 마시면 사람을 취하게 하는 음료의 총칭. (출처: <a href="http://encykorea.aks.ac.kr/Contents/SearchNavi?keyword=%EC%88%A0&ridx=9&tot=411">한국민족문화대백과사전</a>)
 <br><br>
 「주세법(酒稅法)」에 의하면 알코올 함량 1도 이상의 음료를 말한다. 예로부터 알려진 과실주나 곡물주를 비롯, 근대의 증류주에 이르기까지 이른바 주정음료는 모두 술이다.
 <br><br>
